infrastructure/base/istio-ingress-gateway/http-ingress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: http-ingress-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
